# zung

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODOs.md
.github/: codecov.yml
.github/workflows/: cargo_build_test.yml  check.yml  coverage.yml
src/: main.rs
utilities/: Cargo.toml
utilities/sample_torrents/: MIT6.00SCS11_archive.torrent
utilities/src/: torrent.rs
zung_mini/: CHANGELOG.md  Cargo.toml  README.md
zung_mini/src/: lib.rs
zung_mini/src/orst/: benchmark.rs  mod.rs
zung_mini/src/orst/sorters/: bubble_sorter.rs  insertion_sorter.rs  mod.rs  quick_sorter.rs  selection_sorter.rs
zung_mini/src/progbar/: mod.rs
zung_mini/src/strsplit/: mod.rs
zung_parsers/: CHANGELOG.md  Cargo.toml  README.md
zung_parsers/src/: lib.rs
zung_parsers/src/bencode/: de.rs  deser.rs  error.rs  mod.rs  ser.rs  value.rs
zung_torrent/: Cargo.toml  README.md
zung_torrent/src/: lib.rs
zung_torrent/src/client/: mod.rs  peer_id.rs
zung_torrent/src/meta_info/: files.rs  info.rs  mod.rs  pieces.rs
zung_torrent/src/sources/: http_seeder.rs  http_seeders.rs  mod.rs  trackers.rs  trakers.rs
zung_torrent/src/trackers/: mod.rs
zung_torrent/tests/: meta_info.rs  sources.rs  trackers.rs
zung_torrent/tests/sample_torrents/: kali-linux-2024.1-installer-amd64.iso.torrent
