[package]
name = "zung"
version = "0.2.0"
edition = "2021"
authors = ["Ishaan Goel <ishaangoel.99@gmail.com>"]
description = "A monolith of rust projects"
license = "MIT"
repository = "https://github.com/ishaan26/zung"
readme = "README.md"
keywords = ["projects", "learning", "monolith"]

[workspace]
members = ["zung_mini"]
resolver = "2"

[dependencies]
zung_mini = { version = "0.3.1", path = "./zung_mini" }
anstyle = "1.0.8"
clap = { version = "4.5.18", features = ["derive"] }
