[package]
name = "zung"
version = "0.3.0"
edition = "2021"
authors = ["Ishaan Goel <ishaangoel.99@gmail.com>"]
description = "A monolith of rust projects"
license = "MIT"
repository = "https://github.com/ishaan26/zung"
readme = "README.md"
keywords = ["projects", "learning", "monolith"]

[workspace]
members = ["zung_mini"]
resolver = "2"

[dependencies]
zung_mini = { version = "0.4.0", path = "./zung_mini" }
zung_parsers = { version = "0.1.1", path = "./zung_parsers" }

anyhow = "1.0.89"
anstyle = "1.0.8"
clap = { version = "4.5.20", features = ["derive"] }


[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # LTO instructs the linker to optimize at the link stage.
codegen-units = 1 # to allow for maximum size reduction optimizations
panic = "abort"   # rustc can be instructed to abort immediately rather than unwind.
