[package]
name = "zung_mini"
version = "0.3.1"
edition = "2021"
authors = ["Ishaan Goel <ishaangoel.99@gmail.com>"]
description = "Mini rust projects that target specific features of rust"
license = "MIT"
repository = "https://github.com/ishaan26/zung"
readme = "README.md"
keywords = ["projects", "learning", "mini"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
indicatif = "0.17"
colored = "2.1.0"
rand = "0.8"
prettytable = "0.10.0"
