[package]
name = "zung_parsers"
version = "0.1.0"
edition = "2021"
authors = ["Ishaan Goel <ishaangoel.99@gmail.com>"]
description = "Custom implementations of parsers of different data formats"
license = "MIT"
repository = "https://github.com/ishaan26/zung"
readme = "README.md"
keywords = ["projects", "learning", "mini"]

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
toml = "0.8.19"
