[package]
name = "zung_parsers"
version = "0.1.1"
edition = "2021"
authors = ["Ishaan Goel <ishaangoel.99@gmail.com>"]
description = "Data Format Parsing in Rust"
license = "MIT"
repository = "https://github.com/ishaan26/zung"
readme = "README.md"
keywords = ["projects", "learning", "mini"]

[dependencies]
anyhow = "1.0.94"
bytes = { version = "1.9.0", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
toml = "0.8.19"
hex = "0.4.3"
