[package]
name = "zung_torrent"
version = "0.1.0"
edition = "2021"
authors = ["Ishaan Goel <ishaangoel.99@gmail.com>"]
description = "A BitTorrent Client Library"
license = "MIT"
repository = "https://github.com/ishaan26/zung"
readme = "README.md"
keywords = ["projects", "learning", "torrent", "protocol"]

[features]
default = ["client"]
client = ["dep:colored", "dep:human_bytes"]

[dependencies]
anyhow = "1.0.89"
bytes = { version = "1.7.2", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive"] }
hex = "0.4.3"
chrono = { version = "0.4.38", features = ["serde"] }
sha1_smol = "1.0.1"
rayon = "1.10.0"
indexmap = "2.6.0"

colored = { version = "2.1.0", optional = true }
human_bytes = { version = "0.4.3", optional = true }


serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"

zung_parsers = { version = "0.1.1", path = "../zung_parsers" }
